--- a/presentations/meta_book/my_chapter.tex
+++ b/presentations/meta_book/my_chapter.tex
@@ -10,11 +10,17 @@
 % Custom figures.
 % smallfig/ directory is for lo-fi figures,
 % fig/ directory is for full resolution.
-\newcommand{\myfig}[2]{\begin{figure}[!h]\includegraphics[width=\textwidth]{fig/#1.jpg}\caption{#2}\label{#1}\end{figure}}
+\newcommand{\myfig}[2]{\begin{figure}[!h]\includegraphics[width=\textwidth]{fig/#1.jpg}\caption{#2}\label{fig:#1}\end{figure}}
+
 \newcommand{\BI}{\begin{itemize}\item}
 \renewcommand{\I}{\item}
 \newcommand{\EI}{\end{itemize}}
+
 \newcommand{\ER}[1]{\eqref{eq:#1}}
+\newcommand{\SR}[1]{Section~\ref{sec:#1}}
+\newcommand{\sR}[1]{section~\ref{sec:#1}}
+\newcommand{\FR}[1]{Figure~\ref{fig:#1}}
+\newcommand{\fR}[1]{figure~\ref{fig:#1}}
 \chapter{Objective-First Nanophotonic Design}
 \label{intro}
 
@@ -39,11 +45,8 @@ This strategy is unique in that it
 % \input{1d}
 % \input{res}
 \input{wg}
-
-\section{Metamaterials design}
-\subsection{Modification of the design objective}
-\subsection{Cloak devices}
-\subsection{Mimic devices}
+\input{cloak}
+\input{mimic}
 
 \section{Extending the method}
 \subsection{3D}
