--- a/presentations/meta_book/my_chapter.tex
+++ b/presentations/meta_book/my_chapter.tex
@@ -8,9 +8,7 @@
 \newcommand{\subto}{\text{subject to}\;&}
 
 % Custom figures.
-% smallfig/ directory is for lo-fi figures,
-% fig/ directory is for full resolution.
-\newcommand{\myfig}[2]{\begin{figure}[!h]\includegraphics[width=\textwidth]{fig/#1.jpg}\caption{#2}\label{fig:#1}\end{figure}}
+\newcommand{\myfig}[2]{\begin{figure}[!h]\includegraphics[width=0.95\textwidth]{fig/#1.jpg}\caption{#2}\label{fig:#1}\end{figure}}
 
 \newcommand{\BI}{\begin{itemize}\item}
 \renewcommand{\I}{\item}
