--- a/presentations/grouptalk_jun-2012/defs.tex
+++ b/presentations/grouptalk_jun-2012/defs.tex
@@ -16,8 +16,9 @@
 \newcommand{\eg}{{\it e.g.}}
 \newcommand{\ie}{{\it i.e.} }
 
+\DeclareMathOperator*{\JLUminimize}{\text{minimize}}
 
-\newcommand{\minimize}{\mbox{minimize}\quad}
+% \newcommand{\minimize}{\mbox{minimize}\quad}
 \newcommand{\pf}[2]{\frac{\partial #1}{\partial #2}}
 \newcommand{\gradof}[2]{\nabla_{#2} #1}
 \newcommand{\subjectto}{\mbox{subject to}\quad}
